--- a/home.css
+++ b/home.css
@@ -257,16 +257,49 @@ max-width: 70%;            /* Set how wide the line can be */
 #page2 .elem .dets{
     height: 60px;
     border-radius: 50px;
-    width: 80%;
+    min-width: 20vw;
     position: absolute;
     z-index: 9;
     background-color: rgb(218,139,172);
+    cursor: pointer;
+    height: 6vh;
+    font-size: 1rem;
+    text-transform: uppercase;
+     text-align: center;
 }
-#page2 .elem .dets:hover{
-    height: 200px;
+.dets h4{
+    display: inline-block;
+    padding: 10px 10px;
+    margin: 0 20px;
+ 
+}
+.dets .shop{
+    font-weight: 500;
 }
 
+.dets .dropdown a{
+    
+    display:inline-block;
+    text-decoration: none;
+    color: #000;
+    padding: 10px 15px;
+    font-size: 12px;    
+}
 
+.dets .dropdown{
+    display:none;
+    position: absolute;
+    background-color:rgb(240, 190, 210) ;
+    min-width: 20vw;
+    min-height: 10vh; 
+     /* border-radius: 50px; */
+    transition: opacity 0.3s ease; 
+    /* border-radius: 50px; */
+ } 
+.dets:hover .dropdown {
+    display: block;
+
+}
 
 .text2{
     position: relative;
