--- a/home.css
+++ b/home.css
@@ -39,7 +39,16 @@ body{
 
 }
 
+a.logo{
+    text-decoration: none;   /* Removes underline */
+    color: inherit;          /* Prevents color changes for SVG */
+    display: inline-block;   /* Keeps layout stable */
 
+}
+a.logo-link img, 
+a.logo-link svg {
+    display: block;          /* Removes extra spacing under images */
+}
 #nav #nav1{
     /* background-color: red; */
     height: 82px;
@@ -363,6 +372,84 @@ max-width: 70%;            /* Set how wide the line can be */
 }
 .child img{
     height:100% ;
+}
+
+
+
+
+
+/*----------------------------- shop.html ---------------------------------------------------------*/
+.front{
+    display: flex;
+    align-items:flex-start; /* vertically align */
+    justify-content:space-between; /* optional - centers the two columns */
+    /* space between heading and paragraph */
+    
+    
+   padding-right: 1rem;
+   padding-top: 275px;
+   padding-left:1rem ;
+   
+}
+.goodthings h1{
+    
+    font-size: clamp(.3rem,calc(13vw + .1rem),11rem);
+    font-family:'futura';
+    text-transform: uppercase;
+    line-height: 10vw;
+    letter-spacing: 5px;
+    white-space: nowrap;
+    flex: 1;
+    cursor: pointer;
+    position: relative;
+   }
+
+.front .goodthings h1::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -10px; /* position slightly below text */
+   width: 0;
+   height: 5px;
+   
+   background-color: #333;
+   transition: width 0.3s ease-out;
+   display: block;
+   }
+.front .goodthings h1:hover::after{
+    width: 100%;
+    
+   }
+
+ .wecreate p{
+    font-size: clamp(.9rem,calc(7vw + .1rem),.9rem);
+    line-height: 2vw;
+    flex: 1; 
+    max-width: 350px;
+    
+   
+   
+}
+.products {
+    display: grid;
+    grid-template-columns:repeat(3, 1fr);/* repeat(auto-fit, minmax(350px, 1fr));*/
+    gap: 1.5rem;
+    text-align: center; 
+    margin:5vw; 
+}
+ #grid3 img{
+  width: 25vw;
+  height: auto; 
+}
+
+.setofthree img {
+    width: 100%;
+    height: auto;
+}
+.setofthree p{
+    margin: 2rem 0;
+    font-size: 14px;
+    font-weight: 500;
 }
 @media (max-width: 760px) {
    
