--- a/home.css
+++ b/home.css
@@ -415,9 +415,14 @@ max-width: 70%;            /* Set how wide the line can be */
     /* background-color: red; */
     position: relative;
     display: flex;
-    align-items: center;
-    justify-content: center;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
     
+}
+#page3 .child p{
+   font-size: 16px;
+    margin-bottom: 20px;
 }
 .child img{
     height:100% ;
